RESOLVED FIXED285598
[CSS] Tentative build fix for Ubuntu 2204 build bot
https://bugs.webkit.org/show_bug.cgi?id=285598
Summary [CSS] Tentative build fix for Ubuntu 2204 build bot
Claudio Saavedra
Reported 2025-01-08 05:05:43 PST
.
Attachments
Claudio Saavedra
Comment 1 2025-01-08 05:11:41 PST
EWS
Comment 2 2025-01-10 10:10:23 PST
Committed 288716@main (ca99c1658f05): <https://commits.webkit.org/288716@main> Reviewed commits have been landed. Closing PR #38718 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-01-10 10:11:19 PST
Note You need to log in before you can comment on or make changes to this bug.