[CSS] Tentative build fix for Ubuntu 2204 build bot https://bugs.webkit.org/show_bug.cgi?id=285598

Reviewed by Sam Weinig.

The compiler complains about WTF::IsSmartPtr<T> being redefined.
Add a forward-declaration to prevent this and explicitly
add the namespace scope, as it seems that's what confuses
gcc.

* Source/WTF/wtf/Forward.h:
* Source/WebCore/css/values/primitives/CSSUnevaluatedCalc.h:
* Source/WebCore/style/values/primitives/StyleUnevaluatedCalculation.h:

Canonical link: https://commits.webkit.org/288716@main